# WhatsThisFish

./: .env  .gitignore  1  README.md  docker-compose.test.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0b46b94a11a0_adding_width_and_heigh_to_lila_.py  14501bf6590f_inat_context.py  5c29ee0d900c_create_inat_tables.py  62a5c2a42bc2_lila_yolo_addition.py  718dae771660_update_of_annotations_primary_key.py  7c714d9c92ac_changes_to_required_tables_and_schema_.py  972426b5c04c_added_proposed_bbox_to_inatclass.py  998a3198ce78_updated_capture_context.py  9e9b3518c577_minor_adjustment_to_index_name.py  a1f3c8e2d905_change_lila_annotations_id_to_string.py  ac79b76d2e0b_adding_train_split_for_inat_.py  b03710e933e5_createa_lila_tables_and_success_tracker.py  c345176b02e9_image_quality_tables.py  d17f111f414b_update_of_collected_images_pk.py
scripts/: backfill_image_dimensions.py  prepare_dataset.sh  setup_environment.sh
src/: config.py  retry.py
src/config/: data_config.yaml
src/data/: domain_balanced_sampler.py  download_lila.py  factory.py  gcs_client.py  inaturalist_dataset.py  multichannel_dataset.py  quality_scorer.py
src/database/: __init__.py  config.py  models.py
src/etl/: download_lila.py  factory.py  gcs_client.py  inaturalist_dataset.py  photo_transfer.py
src/evaluation/: evaluate.py
src/inference/: crop_export.py  detect_images.py  detect_video.py
src/model/: yolo_multichannel.py
src/models/: CLASSIFICATION_MODEL_SPEC.md  c_dataloader.py  c_dataset.py  od_dataloader.py  od_dataset.py
src/notebooks/: annotation_eda.ipynb
src/preprocessing/: annotation_conversion.py  capture_context_scorer.py  (+13 more)
tests/: conftest.py  test_factory.py  test_five_channel.py  test_integration.py  test_lcn_gradient.py  test_od_dataloader.py  test_pipeline.py  test_scoring.py
(+14 files in other folders)
